Makefile to build, README on how to use

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /*/.DS_Store
+/AIAA-2006-6753/for/*.o
+/AIAA-2006-6753/for/Sgp4Rec.bak
+/AIAA-2006-6753/for/sgp4test.dbg
+/AIAA-2006-6753/for/testfor
+/AIAA-2006-6753/for/tfor.out
+/AIAA-2006-6753/for/tfora.out
