Ignore output files initially checked in

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /AIAA-2006-6753/for/tfor.out
 /AIAA-2006-6753/for/tfora.out
 /Miura_Thesis_CD/SGP4 MATLAB/tmatver.out
+/AIAA-2006-6753/for/tforver.out
+/AIAA-2006-6753/mat/tmatver.out
