--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Miura_Thesis_CD/SGP4 MATLAB/tmatver.out
 /AIAA-2006-6753/for/tforver.out
 /AIAA-2006-6753/mat/tmatver.out
+/AIAA-2006-6753/mat/octave-core
+/Miura_Thesis_CD/SGP4 MATLAB/octave-core
