--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /AIAA-2006-6753/mat/tmatver.out
 /AIAA-2006-6753/mat/octave-core
 /Miura_Thesis_CD/SGP4 MATLAB/octave-core
+/Miura_Thesis_CD/SGP4 MATLAB/tmat.out
