--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /AIAA-2006-6753/mat/octave-core
 /Miura_Thesis_CD/SGP4 MATLAB/octave-core
 /Miura_Thesis_CD/SGP4 MATLAB/tmat.out
+/Miura_Thesis_CD/SGP4 MATLAB/tmatall.out
