Tests generated from MATLAB manual run

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Miura_Thesis_CD/SGP4 MATLAB/octave-core
 /Miura_Thesis_CD/SGP4 MATLAB/tmat.out
 /Miura_Thesis_CD/SGP4 MATLAB/tmatall.out
+/Miura_Thesis_CD/SGP4 MATLAB/TESTS.out
+/js/octave-core
