--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
 - 0.11.13
-before_script:
+install:
+- npm install
 - npm install -g grunt-cli
+before_script:
 - git submodule update --init --recursive
 notifications:
   irc: irc.freenode.org#koansys
